tests/ParseSpec/invalid/expr/case-double-branch.algst
case x of {
  True -> 1,
  True -> 2,
}
